--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,3 +44,32 @@ addopts = "--verbose --cov=minerva --cov-report=xml"
 
 [tool.coverage.run]
 source = ["minerva"]
+
+[tool.black]
+line-length = 88
+target-version = ['py39']
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 88
+multi_line_output = 3
+include_trailing_comma = true
+
+[tool.flake8]
+max-line-length = 88
+extend-ignore = "E203, W503"
+exclude = ".git,__pycache__,build,dist,.mypy_cache,.pytest_cache,.venv"
