--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,17 +21,20 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
-
-    # In your ci.yml, modify the "Install dependencies" step:
+        cache-dependency-path: 'pyproject.toml'
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e .[dev]  # This installs your package in editable mode
-        pip install pytest pytest-cov
+        pip install -e ".[dev]"
     
     - name: Run unit tests
       run: |
         pytest tests/unit/ -v --cov=minerva --cov-report=xml
+    
+    - name: Run integration tests
+      run: |
+        pytest tests/integration/ -v
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
@@ -40,7 +43,11 @@ jobs:
         flags: unittests
         name: codecov-umbrella
 
-  integration:
+    - name: Check storage footprint
+      run: |
+        python scripts/utils/check_storage.py --max-size 3.0
+
+  lint:
     runs-on: ubuntu-latest
     needs: test
     steps:
@@ -50,21 +57,32 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
+        cache: 'pip'
+        cache-dependency-path: 'pyproject.toml'
     
-    - name: Install dependencies
+    - name: Install linting tools
       run: |
         pip install -e ".[dev]"
     
-    - name: Run integration tests
+    - name: Format code with Black
       run: |
-        pytest tests/integration/ -v
+        black --check minerva/ tests/ scripts/
     
-    - name: Check storage footprint
+    - name: Organize imports with isort
       run: |
-        python scripts/utils/check_storage.py --max-size 3.0
+        isort --check-only minerva/ tests/ scripts/
+    
+    - name: Run static analysis with flake8
+      run: |
+        flake8 minerva/ tests/ scripts/
+    
+    - name: Run type checking with mypy
+      run: |
+        mypy minerva/
 
-  lint:
+  build:
     runs-on: ubuntu-latest
+    needs: [test, lint]
     steps:
     - uses: actions/checkout@v4
     
@@ -72,16 +90,24 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
+        cache: 'pip'
+        cache-dependency-path: 'pyproject.toml'
     
-    - name: Install linting tools
+    - name: Install build dependencies
       run: |
-        pip install black flake8 isort mypy
+        pip install build
     
-    - name: Check code formatting
+    - name: Build package
       run: |
-        black --check minerva/ tests/ scripts/
+        python -m build
     
-    - name: Run static analysis
+    - name: Verify package structure
       run: |
-        flake8 minerva/ tests/ scripts/
-        mypy minerva/
+        pip install twine
+        twine check dist/*
+    
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: dist-packages
+        path: dist/
