--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -9,6 +9,8 @@ jobs:
   benchmark:
     runs-on: ubuntu-latest
     timeout-minutes: 120
+    env:
+      PYTHONPATH: /github/workspace
     
     steps:
     - uses: actions/checkout@v4
@@ -17,15 +19,17 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
+        cache: 'pip'
+        cache-dependency-path: 'pyproject.toml'
     
     - name: Install dependencies
       run: |
         pip install -e ".[dev]"
-        pip install requests tqdm
+        pip install requests tqdm psutil matplotlib
     
-    - name: Download benchmark dataset
+    - name: Create directories
       run: |
-        python scripts/automation/download_benchmark_data.py
+        mkdir -p benchmark_data benchmark_results reports
     
     - name: Run comprehensive benchmarks
       run: |
@@ -35,7 +39,9 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: benchmark-results
-        path: benchmark_results/
+        path: |
+          benchmark_results/
+          benchmark_data/
     
     - name: Generate performance report
       run: |
