--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "minerva-rag"
+license = {file = "LICENSE"}
 version = "0.1.0"
 description = "Evolutionary RAG system with holographic memory compression"
 readme = "README.md"
