--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e ".[dev]"
+        pip install -e .
     
     - name: Run unit tests
       run: |
@@ -47,42 +47,9 @@ jobs:
       run: |
         python scripts/utils/check_storage.py --max-size 3.0
 
-  lint:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-        cache: 'pip'
-        cache-dependency-path: 'pyproject.toml'
-    
-    - name: Install linting tools
-      run: |
-        pip install -e ".[dev]"
-    
-    - name: Check code formatting (Optional)
-      run: |
-        black --check minerva/ tests/ scripts/ || echo "Formatting issues found - optional to fix"
-    
-    - name: Organize imports with isort
-      run: |
-        isort --check-only minerva/ tests/ scripts/
-    
-    - name: Run static analysis with flake8
-      run: |
-        flake8 minerva/ tests/ scripts/
-    
-    - name: Run type checking with mypy
-      run: |
-        mypy minerva/
-
   build:
     runs-on: ubuntu-latest
-    needs: [test, lint]
+    needs: test
     steps:
     - uses: actions/checkout@v4
     
